# ai_stock_analyzer

./: .env.example  README.md  backend_acrhtecture.md  docker-compose.yml  frontend_archtecture.md  pyproject.toml
stock-ai-backend/: Dockerfile  alembic.ini  requirements.txt
stock-ai-backend/alembic/: env.py
stock-ai-backend/alembic/versions/: 001_add_group_name_to_portfolios.py
stock-ai-backend/app/: config.py  database.py  deps.py  main.py
stock-ai-backend/app/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py
stock-ai-backend/app/models/: __init__.py  portfolio.py  recommendation.py  stock.py  stock_indicator.py  stock_price.py  stock_price_monthly.py  stock_price_weekly.py  strategy.py  user.py
stock-ai-backend/app/routers/: analysis.py  auth.py  indicators.py  portfolio.py  recommendations.py  stocks.py  strategies.py
stock-ai-backend/app/schemas/: indicator.py  recommendation.py  stock.py  strategy.py
stock-ai-backend/app/services/: ai_service.py  candlestick_service.py  indicator_service.py  krx_service.py  strategy_service.py  yfinance_service.py
stock-ai-backend/app/tasks/: analysis_runner.py  celery_app.py  data_collector.py
stock-ai-backend/app/utils/: helpers.py  indicators.py
stock-ai-backend/scripts/: seed_stocks.py
stock-ai-frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
stock-ai-frontend/src/: App.tsx  index.css  main.tsx
stock-ai-frontend/src/api/: auth.ts  client.ts  indicators.ts  portfolio.ts  recommendations.ts  stocks.ts
(+51 files in other folders)
