[project]
name = "stock-ai-backend"
version = "0.1.0"
description = "AI 기반 주식 분석 플랫폼 — FastAPI 백엔드"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",

    # Database & ORM
    "sqlalchemy[asyncio]==2.0.30",
    "aiomysql==0.2.0",
    "pymysql==1.1.0",
    "alembic==1.13.1",

    # Config & validation
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",

    # 주식 데이터 (pykrx가 pkg_resources 사용 → setuptools<71 필요)
    "setuptools>=60,<71",
    "pykrx==1.0.47",
    "yfinance>=0.2.50",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "ta==0.11.0",

    # AI — 멀티 LLM
    "anthropic==0.26.0",
    "openai==1.30.0",
    "google-generativeai==0.7.0",

    # 비동기 작업
    "celery[redis]==5.4.0",
    "redis==5.0.4",

    # 유틸
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.1.3",
]

[tool.uv]
dev-dependencies = []
